--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background: url("/images/background.svg") no-repeat center;
+  background: url('/home/kk/Documents/web development/loginPage using html and css/images/background.svg')
+    no-repeat center;
   background-size: cover;
   font-family: sans-serif;
 }
@@ -30,7 +31,7 @@ body {
 }
 
 .form::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -128,7 +129,8 @@ body {
   background: #fff;
   opacity: 0;
   transition: 0.8s;
-  background: url("/images/background.svg") no-repeat center;
+  background: url('/home/kk/Documents/web development/loginPage using html and css/images/background.svg')
+    no-repeat center;
   background-size: cover;
   color: #fff;
   text-decoration: none;
